App link updated

--- a/Customer_churn_analysis.ipynb
+++ b/Customer_churn_analysis.ipynb
@@ -1344,6 +1344,16 @@
         "\n",
         "print('------------------------------------------------------------------')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "## Model Deployment on Stremlit\n",
+        "\n",
+        "App Link: https://checkcustomerchurn.streamlit.app/\n"
+      ]
     }
   ],
   "metadata": {
